--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script: mvn clean install -DskipTests
 
 after_success:
   #- mvn clean cobertura:cobertura coveralls:report javadoc:jar
-  - test "${TRAVIS_PULL_REQUEST}" == "false" && test “${TRAVIS_JDK_VERSION}” == “oraclejdk8″ && test "${TRAVIS_TAG}" != "" && mvn deploy -DskipTests --settings travis/travis-settings.xml
+  - test "${TRAVIS_TAG}" != "" && mvn deploy -DskipTests --settings travis/travis-settings.xml
 
 branches:
   only:
