--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
-/bin/
-/target/
-controller/application.port
-/.settings/
+.classpath
+.project
+.settings/
+target/
+bin/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+*.port
