--- a/core/src/main/resources/version.yml
+++ b/core/src/main/resources/version.yml
@@ -5,7 +5,7 @@ info:
   version: @project.version@
   commit:
     id: @git.commit.id@
-    message: @git.commit.message.full@
+    message: "@git.commit.message.full@"
     time: @git.commit.time@
     branch: @git.branch@
     dirty: @git.dirty@
