--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -20,11 +21,6 @@
 	<dependencies>
 
 		<!-- Mandrel -->
-		<dependency>
-			<groupId>io.mandrel</groupId>
-			<artifactId>core</artifactId>
-			<version>${project.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>io.mandrel</groupId>
 			<artifactId>controller</artifactId>
@@ -83,4 +79,5 @@
 
 		</plugins>
 	</build>
+
 </project>
