--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -11,8 +12,547 @@
 	<packaging>pom</packaging>
 	<name>Assembly</name>
 
+	<profiles>
+
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>1.4.0</version>
+						<executions>
+							<execution>
+								<id>standalone</id>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<phase>package</phase>
+								<configuration>
+									<executable>mvn</executable>
+									<arguments>
+										<argument>package</argument>
+										<argument>-Pstandalone</argument>
+									</arguments>
+								</configuration>
+							</execution>
+							<execution>
+								<id>controller</id>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<phase>package</phase>
+								<configuration>
+									<executable>mvn</executable>
+									<arguments>
+										<argument>package</argument>
+										<argument>-Pcontroller</argument>
+									</arguments>
+								</configuration>
+							</execution>
+							<execution>
+								<id>frontier</id>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<phase>package</phase>
+								<configuration>
+									<executable>mvn</executable>
+									<arguments>
+										<argument>package</argument>
+										<argument>-Pfrontier</argument>
+									</arguments>
+								</configuration>
+							</execution>
+							<execution>
+								<id>worker</id>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<phase>package</phase>
+								<configuration>
+									<executable>mvn</executable>
+									<arguments>
+										<argument>package</argument>
+										<argument>-Pworker</argument>
+									</arguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+
+					<plugin>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<version>2.4</version>
+						<executions>
+							<execution>
+								<id>make-final</id>
+								<configuration>
+									<descriptors>
+										<descriptor>assembly/zip.xml</descriptor>
+									</descriptors>
+								</configuration>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+
+					<plugin>
+						<artifactId>jdeb</artifactId>
+						<groupId>org.vafer</groupId>
+						<version>1.0.1</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>jdeb</goal>
+								</goals>
+								<configuration>
+									<verbose>true</verbose>
+									<controlDir>${basedir}/deb/control</controlDir>
+									<dataSet>
+										<data>
+											<src>target/appassembler/bin/</src>
+											<type>directory</type>
+											<excludes>*.bat, .DS_Store, *.exe</excludes>
+											<mapper>
+												<type>perm</type>
+												<prefix>/usr/share/mandrel/bin</prefix>
+												<filemode>755</filemode>
+												<user>root</user>
+												<group>root</group>
+											</mapper>
+										</data>
+										<data>
+											<src>target/appassembler/lib/</src>
+											<includes>*</includes>
+											<type>directory</type>
+											<mapper>
+												<type>perm</type>
+												<prefix>/usr/share/mandrel/lib</prefix>
+												<user>root</user>
+												<group>root</group>
+											</mapper>
+										</data>
+										<data>
+											<src>${project.basedir}/deb/init.d/</src>
+											<type>directory</type>
+											<excludes>.DS_Store</excludes>
+											<mapper>
+												<type>perm</type>
+												<prefix>/etc/init.d</prefix>
+												<filemode>755</filemode>
+												<user>root</user>
+												<group>root</group>
+											</mapper>
+										</data>
+										<data>
+											<src>target/appassembler/conf/</src>
+											<type>directory</type>
+											<mapper>
+												<type>perm</type>
+												<prefix>/usr/share/mandrel/conf/</prefix>
+												<user>root</user>
+												<group>root</group>
+											</mapper>
+										</data>
+									</dataSet>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>rpm-maven-plugin</artifactId>
+						<version>2.1-alpha-3</version>
+						<executions>
+							<execution>
+								<id>attach-rpm</id>
+								<goals>
+									<goal>attached-rpm</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<copyright>Apache 2</copyright>
+							<distribution>Apache 2</distribution>
+							<group>Application/Internet</group>
+							<prefix>/usr</prefix>
+							<changelogFile>changelog</changelogFile>
+							<defineStatements>
+								<defineStatement>_unpackaged_files_terminate_build 0</defineStatement>
+								<defineStatement>_binaries_in_noarch_packages_terminate_build 0</defineStatement>
+							</defineStatements>
+							<defaultFilemode>644</defaultFilemode>
+							<defaultDirmode>755</defaultDirmode>
+							<defaultUsername>root</defaultUsername>
+							<defaultGroupname>root</defaultGroupname>
+							<mappings>
+								<mapping>
+									<directory>/usr/share/mandrel/bin/</directory>
+									<filemode>755</filemode>
+									<sources>
+										<source>
+											<location>target/appassembler/bin/</location>
+											<excludes>
+												<exclude>*.bat</exclude>
+											</excludes>
+										</source>
+									</sources>
+								</mapping>
+								<mapping>
+									<directory>/etc/sysconfig/</directory>
+									<configuration>noreplace</configuration>
+									<sources>
+										<source>
+											<location>rpm/sysconfig</location>
+											<includes>
+												<include>mandrel</include>
+											</includes>
+										</source>
+									</sources>
+								</mapping>
+								<mapping>
+									<directory>/etc/rc.d/init.d/</directory>
+									<filemode>755</filemode>
+									<configuration>true</configuration>
+									<sources>
+										<source>
+											<location>rpm/init.d/mandrel</location>
+										</source>
+									</sources>
+								</mapping>
+								<mapping>
+									<directory>/usr/share/mandrel/lib/</directory>
+									<sources>
+										<source>
+											<location>target/appassembler/lib/</location>
+										</source>
+									</sources>
+								</mapping>
+								<mapping>
+									<directory>/usr/share/mandrel/conf/</directory>
+									<sources>
+										<source>
+											<location>target/appassembler/conf/</location>
+										</source>
+									</sources>
+								</mapping>
+								<mapping>
+									<directory>/usr/share/mandrel/</directory>
+									<sources>
+										<source>
+											<location>..</location>
+											<includes>
+												<include>README.md</include>
+											</includes>
+										</source>
+									</sources>
+								</mapping>
+								<mapping>
+									<directory>/var/log/mandrel/</directory>
+									<filemode>755</filemode>
+									<username>mandrel</username>
+									<groupname>mandrel</groupname>
+								</mapping>
+							</mappings>
+							<preinstallScriptlet>
+								<scriptFile>rpm/scripts/preinstall</scriptFile>
+								<fileEncoding>utf-8</fileEncoding>
+							</preinstallScriptlet>
+							<postinstallScriptlet>
+								<scriptFile>rpm/scripts/postinstall</scriptFile>
+								<fileEncoding>utf-8</fileEncoding>
+							</postinstallScriptlet>
+							<preremoveScriptlet>
+								<scriptFile>rpm/scripts/preremove</scriptFile>
+								<fileEncoding>utf-8</fileEncoding>
+							</preremoveScriptlet>
+							<postremoveScriptlet>
+								<scriptFile>rpm/scripts/postremove</scriptFile>
+								<fileEncoding>utf-8</fileEncoding>
+							</postremoveScriptlet>
+						</configuration>
+					</plugin>
+
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>standalone</id>
+			<properties>
+				<component.id>standalone</component.id>
+				<component.class.main>io.mandrel.bootstrap.Standalone</component.class.main>
+				<component.class.wrapper>io.mandrel.bootstrap.WrapperStandalone</component.class.wrapper>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>io.mandrel</groupId>
+					<artifactId>standalone</artifactId>
+					<version>${project.version}</version>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>appassembler-maven-plugin</artifactId>
+					</plugin>
+					<plugin>
+						<artifactId>maven-resources-plugin</artifactId>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>controller</id>
+			<properties>
+				<component.id>controller</component.id>
+				<component.class.main>io.mandrel.bootstrap.Controller</component.class.main>
+				<component.class.wrapper>io.mandrel.bootstrap.WrapperController</component.class.wrapper>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>io.mandrel</groupId>
+					<artifactId>controller</artifactId>
+					<version>${project.version}</version>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>appassembler-maven-plugin</artifactId>
+					</plugin>
+					<plugin>
+						<artifactId>maven-resources-plugin</artifactId>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>frontier</id>
+			<properties>
+				<component.id>frontier</component.id>
+				<component.class.main>io.mandrel.bootstrap.Frontier</component.class.main>
+				<component.class.wrapper>io.mandrel.bootstrap.WrapperFrontier</component.class.wrapper>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>io.mandrel</groupId>
+					<artifactId>frontier</artifactId>
+					<version>${project.version}</version>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>appassembler-maven-plugin</artifactId>
+					</plugin>
+					<plugin>
+						<artifactId>maven-resources-plugin</artifactId>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>worker</id>
+			<properties>
+				<component.id>worker</component.id>
+				<component.class.main>io.mandrel.bootstrap.Worker</component.class.main>
+				<component.class.wrapper>io.mandrel.bootstrap.WrapperWorker</component.class.wrapper>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>io.mandrel</groupId>
+					<artifactId>worker</artifactId>
+					<version>${project.version}</version>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>appassembler-maven-plugin</artifactId>
+					</plugin>
+					<plugin>
+						<artifactId>maven-resources-plugin</artifactId>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+	</profiles>
+
 	<build>
+		<pluginManagement>
+			<plugins>
+
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>appassembler-maven-plugin</artifactId>
+					<version>1.10</version>
+					<executions>
+						<execution>
+							<id>daemon-${component.id}</id>
+							<phase>package</phase>
+							<goals>
+								<goal>generate-daemons</goal>
+							</goals>
+							<configuration>
+								<!-- <licenseHeaderFile>${basedir}/license-header.txt</licenseHeaderFile> -->
+								<repositoryLayout>flat</repositoryLayout>
+								<repositoryName>lib</repositoryName>
+								<configurationSourceDirectory>../${component.id}/src/main/resources</configurationSourceDirectory>
+								<copyConfigurationDirectory>true</copyConfigurationDirectory>
+								<configurationDirectory>conf</configurationDirectory>
+								<logsDirectory>logs</logsDirectory>
+								<useDaemonIdAsWrapperConfName>true</useDaemonIdAsWrapperConfName>
+								<daemons>
+									<daemon>
+										<id>${component.id}d</id>
+										<commandLineArguments>
+											<commandLineArgument>--spring.config.location=../conf/${component.id}.yml</commandLineArgument>
+										</commandLineArguments>
+										<jvmSettings>
+											<initialMemorySize>1024</initialMemorySize>
+											<maxMemorySize>1024</maxMemorySize>
+											<maxStackSize>128</maxStackSize>
+											<extraArguments>
+												<extraArgument>-Dlogback.configurationFile=../conf/logback.xml</extraArgument>
+												<extraArgument>-Dlogging.file=../logs/${component.id}d.log</extraArgument>
+												<extraArgument>-Dlogging.mode=file</extraArgument>
+												<extraArgument>-server</extraArgument>
+												<extraArgument>-XX:+UseConcMarkSweepGC</extraArgument>
+												<extraArgument>-XX:+CMSParallelRemarkEnabled</extraArgument>
+												<extraArgument>-XX:+UseCMSInitiatingOccupancyOnly</extraArgument>
+												<extraArgument>-XX:+ScavengeBeforeFullGC</extraArgument>
+												<extraArgument>-XX:+CMSScavengeBeforeRemark</extraArgument>
+												<extraArgument>-XX:+PrintGCDateStamps</extraArgument>
+												<extraArgument>-verbose:gc</extraArgument>
+												<extraArgument>-XX:+PrintGCDetails</extraArgument>
+												<extraArgument>-Xloggc:../logs/${component.id}.gc.%t.%p.log</extraArgument>
+												<extraArgument>-XX:+UseGCLogFileRotation</extraArgument>
+												<extraArgument>-XX:NumberOfGCLogFiles=10</extraArgument>
+												<extraArgument>-XX:GCLogFileSize=100M</extraArgument>
+												<!-- <extraArgument>-XX:+HeapDumpOnOutOfMemoryError</extraArgument> -->
+												<!-- <extraArgument>-XX:HeapDumpPath=../logs/${component.id}d-heapdump`date`.hprof</extraArgument> -->
+												<extraArgument>-Djava.net.preferIPv4Stack=true</extraArgument>
+											</extraArguments>
+										</jvmSettings>
+										<wrapperMainClass>${component.class.wrapper}</wrapperMainClass>
+										<platforms>
+											<platform>jsw</platform>
+										</platforms>
+										<generatorConfigurations>
+											<generatorConfiguration>
+												<generator>jsw</generator>
+												<includes>
+													<include>linux-x86-32</include>
+													<include>linux-x86-64</include>
+												</includes>
+												<configuration>
+													<property>
+														<name>wrapper.logfile</name>
+														<value>../logs/${component.id}-wrapper.log</value>
+													</property>
+												</configuration>
+											</generatorConfiguration>
+										</generatorConfigurations>
+									</daemon>
+								</daemons>
+							</configuration>
+						</execution>
+						<execution>
+							<id>program-${component.id}</id>
+							<phase>package</phase>
+							<goals>
+								<goal>assemble</goal>
+							</goals>
+							<configuration>
+								<!-- <licenseHeaderFile>${basedir}/license-header.txt</licenseHeaderFile> -->
+								<repositoryLayout>flat</repositoryLayout>
+								<repositoryName>lib</repositoryName>
+								<configurationSourceDirectory>../${component.id}/src/main/resources</configurationSourceDirectory>
+								<copyConfigurationDirectory>true</copyConfigurationDirectory>
+								<configurationDirectory>conf</configurationDirectory>
+								<logsDirectory>logs</logsDirectory>
+								<programs>
+									<program>
+										<id>${component.id}</id>
+										<mainClass>${component.class.main}</mainClass>
+										<commandLineArguments>
+											<commandLineArgument>--spring.config.location=../conf/${component.id}.yml</commandLineArgument>
+										</commandLineArguments>
+										<jvmSettings>
+											<initialMemorySize>1024m</initialMemorySize>
+											<maxMemorySize>1024m</maxMemorySize>
+											<maxStackSize>128m</maxStackSize>
+											<extraArguments>
+												<extraArgument>-Dlogback.configurationFile=../conf/logback.xml</extraArgument>
+												<extraArgument>-Dlogging.file=../logs/${component.id}.log</extraArgument>
+												<extraArgument>-Dlogging.mode=file</extraArgument>
+												<extraArgument>-server</extraArgument>
+												<extraArgument>-XX:+UseConcMarkSweepGC</extraArgument>
+												<extraArgument>-XX:+CMSParallelRemarkEnabled</extraArgument>
+												<extraArgument>-XX:+UseCMSInitiatingOccupancyOnly</extraArgument>
+												<extraArgument>-XX:+ScavengeBeforeFullGC</extraArgument>
+												<extraArgument>-XX:+CMSScavengeBeforeRemark</extraArgument>
+												<extraArgument>-XX:+PrintGCDateStamps</extraArgument>
+												<extraArgument>-verbose:gc</extraArgument>
+												<extraArgument>-XX:+PrintGCDetails</extraArgument>
+												<extraArgument>-Xloggc:../logs/${component.id}.gc.%t.%p.log</extraArgument>
+												<extraArgument>-XX:+UseGCLogFileRotation</extraArgument>
+												<extraArgument>-XX:NumberOfGCLogFiles=10</extraArgument>
+												<extraArgument>-XX:GCLogFileSize=100M</extraArgument>
+												<!-- <extraArgument>-XX:+HeapDumpOnOutOfMemoryError</extraArgument> -->
+												<!-- <extraArgument>-XX:HeapDumpPath=../logs/${component.id}-heapdump`date`.hprof</extraArgument> -->
+												<extraArgument>-Djava.net.preferIPv4Stack=true</extraArgument>
+											</extraArguments>
+										</jvmSettings>
+									</program>
+								</programs>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>2.7</version>
+					<executions>
+						<execution>
+							<id>copy-resources</id>
+							<phase>package</phase>
+							<goals>
+								<goal>copy-resources</goal>
+							</goals>
+							<configuration>
+								<outputDirectory>${project.build.directory}/appassembler</outputDirectory>
+								<resources>
+									<resource>
+										<directory>${project.build.directory}/generated-resources/appassembler/jsw/${component.id}d</directory>
+									</resource>
+								</resources>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 
 	</build>
-	
+
 </project>
