--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -9,13 +9,11 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>standalone</artifactId>
-	<packaging>jar</packaging>
 	<name>Standalone</name>
 
 	<properties>
-		<component.id>${project.artifactId}</component.id>
-		<component.class.main>io.mandrel.bootstrap.Standalone</component.class.main>
-		<component.class.wrapper>io.mandrel.bootstrap.WrapperStandalone</component.class.wrapper>
+		<!-- Build resources properties -->
+		<mandrel.tools.directory>../tools</mandrel.tools.directory>
 	</properties>
 
 	<dependencies>
@@ -59,25 +57,5 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
-	<build>
-		<plugins>
-
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>${spring-boot.version}</version>
-				<configuration>
-					<mainClass>io.mandrel.bootstrap.Standalone</mainClass>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>appassembler-maven-plugin</artifactId>
-			</plugin>
-
-		</plugins>
-	</build>
 
 </project>
