--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -10,14 +10,16 @@
 	</parent>
 	<artifactId>distribution</artifactId>
 	<packaging>pom</packaging>
-	<name>Assembly</name>
+	<name>Distribution</name>
 
 	<profiles>
 
 		<profile>
 			<id>default</id>
 			<activation>
-				<activeByDefault>true</activeByDefault>
+				<property>
+					<name>!deploy</name>
+				</property>
 			</activation>
 			<build>
 				<plugins>
