Activation Profiles for Maven

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -358,6 +358,7 @@
 			</plugin>
 
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
 				<executions>
 					<execution>
